2006-07-28  Yann Hodique  <Yann.Hodique@lifl.fr>

	* config/circe-config.el: extended sorting tracking
	(lui-track-set-modified-status): faces are optional

	* config/slime-config.el (slime): install slime48

2006-07-19  Yann Hodique  <Yann.Hodique@lifl.fr>

	* custom/patches.el (temporary-file-directory): bug fix

	* config/slime-config.el: initial checkin

2006-07-06  Yann Hodique  <Yann.Hodique@lifl.fr>

	* lib/icomplete+.el (read-from-minibuffer): fix arguments to comply with new signature

	* config/compile-config.el: don't make compile-history buffer-local after all

	* dotemacs.el: removing config for packages I don't use for now
	more doc

	* dotemacs-cust.el: remove semantic configuration

	* custom/autoloads.el: xtla does not exist anymore

	* config/latex-config.el (request): fix TeX-data-directory for my installation

2006-06-26  Yann Hodique  <Yann.Hodique@lifl.fr>

	* lib/mime.el (mime-mode): remove faulty comment (bug in here)

	* config/ediff-config.el (require): fix compilation issue

	* config/compile-config.el: fix compilation issue

2006-06-25  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/patches.el ([insert]): undefine it

	* perso/mycode.el: comment out problematic font-locking

	* latex-style/beamer.el: initial checkin

2006-06-08  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el (kbd): C-c k is now irrelevant
	(emms): new setup for emms 2

	* config/lisp-config.el (yh/insert-elisp-key): function to ease key definition

2006-06-04  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/visual.el (default-frame-alist): leave only common configuration
	(window-system-default-frame-alist): specific settings here

	* config/org-config.el (org-insert-heading): advice this function instead

2006-05-30  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/physical-line.el: initial checkin

	* perso/paredit.el: update to newest beta

2006-05-29  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el (org-config): load by default